--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "node app.js",
+		"dev": "node --experimental-modules --es-module-specifier-resolution=node app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -12,8 +12,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.24.0",
-		"chalk": "^5.0.0",
-		"koa": "^2.13.4"
+		"chalk": "4.1.2"
 	},
 	"devDependencies": {
 		"eslint": "^8.5.0"
