--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"up": "node --experimental-modules --es-module-specifier-resolution=node upload.js",
 		"dev": "node --experimental-modules --es-module-specifier-resolution=node app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
